command parsing improvements